--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "6.12.2",
+    "@prisma/client": "^6.1.0",
     "@prisma/nuxt": "0.2.0",
     "nuxt": "^3.15.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "vue": "latest",
     "vue-router": "latest"
-  }
+  },
+  "devDependencies": {}
 }
